// Vitest Snapshot v1

exports[`<Icon /> > should render 1`] = `
<Icon
  as="i"
  className=" fas fa-test"
  fixedWidth={false}
  onClick={null}
/>
`;

exports[`<Icon /> > should render placed tooltip when tipPlacement props defined 1`] = `
<Tooltip
  position="bottom"
  tip="Tooltip"
>
  <Icon
    as="i"
    className=" fas fa-test"
    fixedWidth={false}
    onClick={null}
  />
</Tooltip>
`;

exports[`<Icon /> > should render tooltip when tip props is defined 1`] = `
<Tooltip
  position="top"
  tip="Tooltip"
>
  <Icon
    as="i"
    className=" fas fa-test"
    fixedWidth={false}
    onClick={null}
  />
</Tooltip>
`;

exports[`<Icon /> > should render when [fixedWith=true] 1`] = `
<Icon
  as="i"
  className=" fas fa-test"
  fixedWidth={true}
  onClick={null}
/>
`;

exports[`<Icon /> > should render when className prop provided 1`] = `
<Icon
  as="i"
  className="heavy  fas fa-test"
  fixedWidth={false}
  onClick={null}
/>
`;
